Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mywebserver-ingress
spec:
  rules:
  - http:
      paths:
      - path: /myself.json
        backend:
          serviceName: mywebservice
          servicePort: 80
